--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -50,8 +50,62 @@
   </div>
 </div>
 
+<!-- Bootstrap -->
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLongTitle" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLongTitle">Track it! </h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <div class="row" style="text-align: center">
+          <div class="col-sm-4">
+            <div class="d-flex justify-content-center" >
+                <img class="moodBtn" src="./styles/happyRabbitNoBody.png" alt="Happy" width="100px" data-value="happy"/>
+                <h5>Happy</h5>
+                </div>
+          </div>
+
+          <div class="col-sm-4">
+                <img class="moodBtn" src="./styles/neutralRabbitNoBody.png" alt="Neutral" width="100px" data-value="neutral"/>
+                <h5>Neutral</h5>
+          </div>
+          <div class="col-sm-4">
+                <img  src="./styles/sadRabbitNoBody.png" alt="Sad" class="moodBtn" width="100px" data-value="sad"/>
+              <h5>Sad</h5>
+          </div>
+      </div>
+    
+    
+      <div class="row" style="text-align: center">
+          <div class="col-md-4">
+            <img class="bike activityBtn" src="./styles/bike.png" alt="Bike" width="100" data-value="bike"/>
+          </div>
+          <div class="col-md-4">
+            <img class="weights activityBtn" src="./styles/weights.png" alt="Weights" width="100" data-value="weight" />
+          </div>
+          <div class="col-md-4">
+            <img class="treadmill activityBtn" src="./styles/treadmill.png" alt="Treadmill" width="100" data-value="treadmill"/>
+          </div>
+      </div>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="modal-save btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <!-- Scripts -->
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script src="/js/index.js"></script>
+
+
+
