Type on weight data-value, should have been weights

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -86,7 +86,7 @@
             <img class="bike activityBtn" src="./styles/bike.png" alt="Bike" width="100" data-value="bike"/>
           </div>
           <div class="col-md-4">
-            <img class="weights activityBtn" src="./styles/weights.png" alt="Weights" width="100" data-value="weight" />
+            <img class="weights activityBtn" src="./styles/weights.png" alt="Weights" width="100" data-value="weights" />
           </div>
           <div class="col-md-4">
             <img class="treadmill activityBtn" src="./styles/treadmill.png" alt="Treadmill" width="100" data-value="treadmill"/>
